<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.fer.tel.rassus.EditActivity">

    <TextView
        android:text="@string/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/text_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edit_title"
        android:inputType="text"/>

    <TextView
        android:text="@string/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/text_description" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edit_description"
        android:inputType="text"/>

    <TextView
        android:text="@string/edit_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/text_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/text_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edit_size" />

    <TextView
        android:text="@string/edit_taken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/text_taken" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_taken"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edit_taken"
        android:inputType="number"/>

    <TextView
        android:text="@string/edit_mentor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_taken"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/text_mentor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_mentor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edit_mentor" />

    <TextView
        android:text="@string/edit_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_mentor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/text_team" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_team"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edit_team" />

    <Button
        android:text="@string/edit_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_done"
        android:onClick="send"
        android:layout_below="@+id/edit_team"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />
</RelativeLayout>
